--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:3001",
   "dependencies": {
     "npm": "^5.8.0",
     "react": "^16.3.2",
