--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "npm": "^5.8.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
