--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.0.15",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "validator": "^9.4.1"
+    "validator": "^9.4.1",
+    "victory": "^0.26.0"
   }
 }
