--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.3.2",
     "react-materialize": "^2.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "victory": "^0.26.0"
   },
   "scripts": {
     "start": "react-scripts start",
