--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-materialize": "^2.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-signup-login-component": "^1.0.3",
     "victory": "^0.26.0"
   },
   "scripts": {
